# readmission-prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Test_API.ipynb  main.py  pyproject.toml
api/: Test_API.ipynb  main.py
exploratory_analysis/: Readmission_EDA.ipynb
frontend/: streamlit.py  valid_age.csv  valid_diag.csv  valid_gender.csv  valid_race.csv
notebooks/: Coordinator.ipynb  Readmission_EDA.ipynb  Testing_for_Tests.ipynb
production/: Coordinator.ipynb  data_preprocessing.py  data_validations.py  feature_engineering.py  model.py  model_calibration.py  utils.py
tests/: test_data_validations.py  test_feature_engineering.py  test_model_calibration.py
